--- a/bower.json
+++ b/bower.json
@@ -11,6 +11,11 @@
     "ember-resolver": "~0.1.18",
     "jquery": "^1.11.1",
     "loader.js": "ember-cli/loader.js#3.2.0",
-    "qunit": "~1.17.1"
+    "qunit": "~1.17.1",
+    "firebase": "^2.1.0",
+    "bootstrap": "~3.3.5",
+    "jquery-knob": "~1.2.11",
+    "fontawesome": "4.3.0",
+    "animate.css": "3.2.6"
   }
 }
