--- a/package.json
+++ b/package.json
@@ -34,6 +34,11 @@
     "ember-cli-uglify": "^1.0.1",
     "ember-data": "1.13.5",
     "ember-disable-proxy-controllers": "^1.0.0",
-    "ember-export-application-global": "^1.0.2"
+    "ember-export-application-global": "^1.0.2",
+    "emberfire": "1.5.0",
+    "liquid-fire": "^0.21.2",
+    "torii": "0.5.1",
+    "ui-icon": "0.5.1",
+    "ui-knob": "0.1.1"
   }
 }
